5.5.0
Added vertical home menu.
New OSD layout.
Added new Panel view.
New layout for wall view.
New layout for fanart view.
New layout for banner lists.
New Context Menu.
New layout for topbars.
New layout for the home menu and new widget management system.
New management for dialogs.
Added file manager to settings.
Added option to stop playback on return to menu.
Updated busy spinner.
The skin now does not share the main menu with other skins.
Added "reboot to Android" option in quit menu.
Mute topbar icon switches to red when muted.
Added support for the plugin.program.autocompletion addon.
Added option to disable default startup logo.
Enhanced details in addon browser.
Removed Kodi logo from home screen.
Added support for PlexKodiConnect context menu.
Removed custom sources dialog.
Added event log to settings.
Added Aspect ratio info in Dialog video info.
Updated support for script.extendedinfo.
Removed Artwork downloader from context menu.
Updated support for the script.skin.helper.service addon.
Added support for the script.skin.helper.backgrounds addon.
Added support for the script.skin.helper.colorpicker addon.
Added support for the script.skin.helper.skinbackup addon.
Updated languages.
Bugs fixed.

5.0.0
Added toggles to skin settings.
Added donation message.
Enhanced seek bar.
Added Runtime for PleXBMC Episode widgets (only for Tgxcorporation's pleXBMC plugin).
Added Plot and Ratings for PleXBMC widgets (only for Tgxcorporation's pleXBMC plugin).
Added support for PleXBMC recently added shows widget (only for Tgxcorporation's pleXBMC plugin).
Added support for PleXBMC fanart in shelf items (only for Tgxcorporation's pleXBMC plugin).
Added Recently viewed shows to Plex Home submenu.
Added Favourites to Quit Menu.
Added option to disable zoomed images as fanart in pictures.
Added scrollbar to Quit Dialog.
Moved Plex and Reload skin controls into Skin Settings.
New layout for the busy dialog.