@@ -1,0 +1,162 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<window>
+    <defaultcontrol>3</defaultcontrol>
+    <menucontrol>9000</menucontrol>
+    <controls>
+        <include>DimBG</include>
+        <control type="group">
+            <include>DialogOpenClose</include>
+            <control type="image">
+                <posx>-760</posx>
+                <posy>150</posy>
+                <width>2930</width>
+                <height>876</height>
+                <include>DialogTransparency</include>
+                <texture border="150,40,150,40">$VAR[Theme.Color]/common/bg_dialog.png</texture>
+            </control>
+            <control type="image">
+                <posx>100</posx>
+                <posy>142</posy>
+                <width>1720</width>
+                <height>217</height>
+                <texture border="100">$VAR[Theme.Color]/common/bg_list.png</texture>
+            </control>
+            <control type="image">
+                <posx>100</posx>
+                <posy>862</posy>
+                <width>1720</width>
+                <height>172</height>
+                <texture border="100">$VAR[Theme.Color]/common/bg_list.png</texture>
+            </control>
+            <control type="label" id="2">
+                <posx>TextMargin</posx>
+                <posy>183</posy>
+                <width>1800</width>
+                <height>105</height>
+                <align>center</align>
+                <font>InfoTitleFont</font>
+                <include>TextColor_MainColor</include>
+                <label>$LOCALIZE[35058]</label>
+            </control>
+            <control type="label">
+                <posx>0</posx>
+                <posy>270</posy>
+                <width>640</width>
+                <height>35</height>
+                <align>center</align>
+                <font>InfoTitleSubFont</font>
+                <include>TextColor_MainColor</include>
+                <label>$LOCALIZE[35050]</label>
+            </control>
+            <control type="label">
+                <posx>1280</posx>
+                <posy>270</posy>
+                <width>640</width>
+                <height>35</height>
+                <align>center</align>
+                <font>InfoTitleSubFont</font>
+                <include>TextColor_MainColor</include>
+                <label>$LOCALIZE[35059]</label>
+            </control>
+            <!--PROFILES-->
+            <control type="grouplist" id="3">
+                <posx>0</posx>
+                <posy>318</posy>
+                <width>640</width>
+                <height>585</height>
+                <onright>5</onright>
+                <ondown>9001</ondown>
+                <include>LeftMenuButtonGroup</include>
+            </control>
+            <control type="button" id="10">
+                <description>Default controller button</description>
+                <align>center</align>
+                <include>LeftMenuButton</include>
+            </control>
+            <!--IMAGE-->
+            <control type="gamecontroller" id="31">
+                <posx>690</posx>
+                <posy>368</posy>
+                <width>540</width>
+                <height>350</height>
+            </control>
+            <!--BUTTONS-->
+            <control type="grouplist" id="5">
+                <description>Features grouplist</description>
+                <posx>1280</posx>
+                <posy>318</posy>
+                <width>640</width>
+                <height>585</height>
+                <onleft>3</onleft>
+                <onright>61</onright>
+                <onup>5</onup>
+                <ondown>5</ondown>
+                <itemgap>0</itemgap>
+                <pagecontrol>61</pagecontrol>
+            </control>
+            <control type="scrollbar" id="61">
+                <posx>1886</posx>
+                <posy>318</posy>
+                <height>585</height>
+                <include>VerticalScroller</include>
+                <onleft>5</onleft>
+                <onright>9001</onright>
+            </control>
+            <control type="button" id="7">
+                <description>Default feature button</description>
+                <align>center</align>
+                <include>LeftMenuButton</include>
+            </control>
+            <control type="label" id="8">
+                <description>Feature group title</description>
+                <align>center</align>
+                <width>640</width>
+                <include>LeftMenuTitleLabel</include>
+            </control>
+            <control type="image" id="9">
+                <description>Feature separator image</description>
+                <width>640</width>
+                <height>1</height>
+                <texture>-</texture>
+            </control>
+            <!--DIALOG BUTTONS-->
+            <control type="grouplist" id="9001">
+                <posx>0</posx>
+                <posy>903</posy>
+                <width>1920</width>
+                <height>90</height>
+                <itemgap>30</itemgap>
+                <aligny>bottom</aligny>
+                <align>center</align>
+                <orientation>horizontal</orientation>
+                <onup>3</onup>
+                <ondown>9001</ondown>
+                <control type="button" id="18">
+                    <width>384</width>
+                    <include>ButtonFocusAnimation</include>
+                    <label>$LOCALIZE[186]</label>
+                </control>
+                <control type="button" id="19">
+                    <width>384</width>
+                    <include>ButtonFocusAnimation</include>
+                    <label>$LOCALIZE[10035]</label>
+                </control>
+                <control type="button" id="20">
+                    <width>384</width>
+                    <include>ButtonFocusAnimation</include>
+                    <label>$LOCALIZE[21452]</label>
+                </control>
+                <control type="button" id="17">
+                    <width>384</width>
+                    <include>ButtonFocusAnimation</include>
+                    <label>$LOCALIZE[10043]</label>
+                </control>
+                <control type="button" id="21">
+                    <width>384</width>
+                    <include>ButtonFocusAnimation</include>
+                    <label>$LOCALIZE[35013]</label>
+                </control>
+            </control>
+        </control>
+    </controls>
+</window>
